methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:9: error: ')' expected but 'if' found.
  if (getCouleurSol()==Color.green){
  ^